update category form

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -67,9 +67,14 @@
 					"target": "login"
 				},
 				{
-					"pattern": "category",
+					"pattern": "categories",
 					"name": "category",
 					"target": "category"
+				},
+				{
+					"pattern": "category/create",
+					"name": "category_create",
+					"target": "category_form"
 				},
 				{
 					"pattern": "item",
@@ -96,6 +101,12 @@
 				},
 				"category": {
 					"viewName": "master_data.category.list",
+					"controlId": "appContainer",
+					"parent": "main",
+					"viewLevel": 1
+				},
+				"category_form": {
+					"viewName": "master_data.category.form",
 					"controlId": "appContainer",
 					"parent": "main",
 					"viewLevel": 1
